--- a/api_usuarios/src/main/resources/application.properties
+++ b/api_usuarios/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=api_usuarios
 server.port=5095
+#SWAGGER
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
 # Configuración de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/gestion_usuarios?serverTimezone=UTC
 spring.datasource.username=root
